# NanoDrone-Hardware

./: .gitignore  PPM_Encoder.c  PPM_Generate.c  PPM_Read.c  PPM_Read.ino  README.md
InfoFlash/: CMakeLists.txt
InfoFlash/InfoWrite/: CMakeLists.txt  flash_utils.h  flashinfo.cpp
PPM/: CMakeLists.txt
PPM/MainController/: CMakeLists.txt  PPM_Generate.c  PPM_Generator.h  main.c
PPM/PPM_Generate/: CMakeLists.txt  PPM_Generate.c
PPM/PPM_Read/: CMakeLists.txt
client_server/: CMakeLists.txt  PicoWebServer.cpp
client_server/InfoFlash/: CMakeLists.txt  flashinfo.cpp
client_server/PicoWebServer/: CMakeLists.txt  PicoWebServer.c  PicoWebServer.cpp  espUart.h  flash_utils.h  main.cpp  ppm.h
client_server/server/: joy.py  server.py  test.py  test.py.save
client_server/wifi_setup/: CMakeLists.txt  espUart.h  main.cpp
comm_stack/: CMakeLists.txt
comm_stack/ppm_gen/: CMakeLists.txt  ppm_gen.c
